# Git-Roast-MCP

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  README.md  README_HF_SPACES.md  app.py  logic.py  pyproject.toml  requirements.txt
docs/: DEPLOYMENT.md  HACKATHON.md  README.md  SETUP.md
