[project]
name = "git-roast-mcp"
version = "0.1.0"
description = "Brutally roast GitHub repositories using AI - MCP Server for Track 1: Building MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio[mcp]>=6.0.0",
    "requests>=2.31.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "sseclient>=0.0.27"
]

[project.urls]
Homepage = "https://github.com/your-username/git-roast-mcp"
Repository = "https://github.com/your-username/git-roast-mcp"
